# xin-offer

./: .gitignore  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: Makefile  pyproject.toml  requirements.txt
apps/api/app/: main.py
apps/api/app/client/: openai_client.py
apps/api/app/core/: config.py
apps/api/app/db/: deps.py  session.py
apps/api/app/errors/: interviews.py
apps/api/app/models/: base.py  interview.py  interview_message.py  interview_report.py
apps/api/app/prompts/: chat.py  interviews.py
apps/api/app/routes/: chat.py  health.py  interviews.py
apps/api/app/schemas/: chat.py  interviews.py
apps/api/app/services/: chat.py  interviews_service.py
apps/api/app/stores/: interview_store.py
apps/api/app/test/: create_interview_demo.py  query_interview_demo.py
apps/api/app/utils/: format_json.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 5fc03475f9f4_create_interview_tables.py
apps/web/: package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/components/chat/: create-interview-dialog.tsx  index.tsx  input-box.tsx  interview-card.tsx  interview-result-dialog.tsx  message-list.tsx  sider.tsx  start-interview-dialog.tsx  types.ts
apps/web/components/ui/: sheet.tsx
apps/web/hooks/: use-chat-messages.ts  use-interview-history.ts  use-interview-session.ts
apps/web/lib/: chat.ts  const.ts
apps/web/services/: chat.ts  interview.ts
docs/: architecture.md  product.md  命令.md
