[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.14.1",
    "certifi==2026.6.17",
    "click==8.4.2",
    "distro==1.9.0",
    "fastapi==0.139.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.18",
    "jiter==0.16.0",
    "openai==2.44.0",
    "psycopg[binary]>=3.3.4",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "python-dotenv==1.2.2",
    "sniffio==1.3.1",
    "socksio==1.0.0",
    "sqlalchemy>=2.0.51",
    "starlette==1.3.1",
    "tqdm==4.68.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.49.0",
]
